Pass tests on java 17 systems